--- a/src/main/java/vista/interfaces/Busqueda.fxml
+++ b/src/main/java/vista/interfaces/Busqueda.fxml
@@ -18,7 +18,7 @@
       <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
    </rowConstraints>
    <children>
-      <TextField promptText="Ingrese el criterio de búsqueda" GridPane.columnSpan="2147483647">
+      <TextField fx:id="txtBusquedaCriterio" promptText="Ingrese el criterio de búsqueda" GridPane.columnSpan="2147483647">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
@@ -26,7 +26,7 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </TextField>
-      <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+      <TableView fx:id="tblBusqueda" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
         <columns>
           <TableColumn prefWidth="75.0" text="Columna 1" />
           <TableColumn prefWidth="75.0" text="Columna 2" />
@@ -41,12 +41,12 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.rowIndex="2">
+      <Button fx:id="btnBusquedaNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <Button fx:id="btnBusquedaSeleccionar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
