--- a/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
+++ b/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
@@ -18,7 +18,7 @@
       <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
    </rowConstraints>
    <children>
-      <TextField promptText="Ingrese el legajo, apellido o nombre del docente" GridPane.columnSpan="2147483647">
+      <TextField fx:id="txtCargoDocenteCriterio" promptText="Ingrese el legajo, apellido o nombre del docente" GridPane.columnSpan="2147483647">
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
@@ -26,12 +26,12 @@
             <Insets />
          </GridPane.margin>
       </TextField>
-      <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+      <TableView fx:id="tblCargoDocente" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
         <columns>
-          <TableColumn maxWidth="2000.0" prefWidth="75.0" text="Legajo" />
-          <TableColumn prefWidth="75.0" text="Apellido y nombre" />
-            <TableColumn maxWidth="2000.0" prefWidth="75.0" text="Área" />
-            <TableColumn prefWidth="75.0" text="Cargo" />
+          <TableColumn fx:id="colCargoDocenteLegajo" maxWidth="2000.0" prefWidth="75.0" text="Legajo" />
+          <TableColumn fx:id="colCargoDocenteNombre" prefWidth="75.0" text="Apellido y nombre" />
+            <TableColumn fx:id="colCargoDocenteArea" maxWidth="2000.0" prefWidth="75.0" text="Área" />
+            <TableColumn fx:id="colCargoDocenteCargo" prefWidth="75.0" text="Cargo" />
         </columns>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -43,17 +43,17 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo docente" GridPane.rowIndex="2">
+      <Button fx:id="btnCargoDocenteDocente" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo docente" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar cargo" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <Button fx:id="btnCargoDocenteSeleccionar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar cargo" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo cargo" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Button fx:id="btnCargoDocenteCargo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo cargo" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
