--- a/src/main/java/vista/interfaces/Informes.fxml
+++ b/src/main/java/vista/interfaces/Informes.fxml
@@ -30,22 +30,22 @@
                 <RowConstraints minHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar" GridPane.columnIndex="1">
+                  <Button fx:id="btnInformesGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar como" GridPane.columnIndex="2">
+                  <Button fx:id="btnInformesGuardarComo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar como" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Exportar a Excel" GridPane.columnIndex="3">
+                  <Button fx:id="btnInformesExcel" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Exportar a Excel" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Volver a la lista">
+                  <Button fx:id="btnInformesVolver" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Volver a la lista">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -67,7 +67,7 @@
                         <Insets />
                      </GridPane.margin>
                   </Label>
-                  <TextField promptText="Ingrese el nombre del informe" GridPane.columnIndex="1">
+                  <TextField fx:id="txtInformesNombre" promptText="Ingrese el nombre del informe" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -77,7 +77,7 @@
                         <Insets />
                      </GridPane.margin>
                   </Label>
-                  <TextField promptText="Ingrese la descripción del informe" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtInformesDescripcion" promptText="Ingrese la descripción del informe" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
@@ -102,7 +102,7 @@
                         <RowConstraints vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <TableView>
+                        <TableView fx:id="tblInformes">
                           <columns>
                             <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Columna 1" />
                             <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Columna 2" />
@@ -143,32 +143,32 @@
                       <RowConstraints vgrow="NEVER" />
                     </rowConstraints>
                      <children>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Duplicar">
+                        <Button fx:id="btnFiltroDuplica" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Duplicar">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver" GridPane.columnIndex="1">
+                        <Button fx:id="btnFiltroVer" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ordenar" GridPane.columnIndex="2">
+                        <Button fx:id="btnFiltroOrdena" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ordenar" GridPane.columnIndex="2">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Subir" GridPane.columnIndex="3">
+                        <Button fx:id="btnFiltroSubir" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Subir" GridPane.columnIndex="3">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Bajar" GridPane.columnIndex="4">
+                        <Button fx:id="btnFiltroBajar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Bajar" GridPane.columnIndex="4">
                            <GridPane.margin>
                               <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
                         </Button>
-                        <TableView GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+                        <TableView fx:id="tblFiltro" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                           <columns>
                             <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Columna" />
                             <TableColumn editable="false" prefWidth="75.0" sortable="false" text="Nombre" />
@@ -213,14 +213,14 @@
                               <Insets right="10.0" />
                            </GridPane.margin>
                         </Label>
-                        <TextField minWidth="-Infinity" prefWidth="200.0" promptText="Ingrese un nombre para la columna" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
-                        <ComboBox maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Filtro" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                        <TextField fx:id="txtFiltroNombre" minWidth="-Infinity" prefWidth="200.0" promptText="Ingrese un nombre para la columna" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
+                        <ComboBox fx:id="cmbFiltroFiltro" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Filtro" GridPane.columnSpan="2" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets right="10.0" />
                            </GridPane.margin>
                         </ComboBox>
-                        <TextField minWidth="-Infinity" prefWidth="150.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-                        <ComboBox maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Cálculo" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                        <TextField fx:id="txtFiltroCondicion" minWidth="-Infinity" prefWidth="150.0" promptText="Ingrese la condición a filtrar" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+                        <ComboBox fx:id="btnFiltroCalculo" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" promptText="Cálculo" GridPane.columnSpan="2" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets right="10.0" />
                            </GridPane.margin>
@@ -234,12 +234,12 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Aplicar">
+                              <Button fx:id="btnFiltroAplicar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Aplicar">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Limpiar" GridPane.columnIndex="1">
+                              <Button fx:id="btnFiltroLimpiar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Limpiar" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
