--- a/src/main/java/vista/interfaces/ListaInformes.fxml
+++ b/src/main/java/vista/interfaces/ListaInformes.fxml
@@ -14,10 +14,10 @@
 
 <BorderPane prefHeight="480.0" prefWidth="640.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.ListaInformes">
    <center>
-      <TableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <TableView fx:id="tblListaInformes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn maxWidth="500.0" prefWidth="75.0" text="ID" />
-          <TableColumn prefWidth="75.0" text="Nombre del informe" />
+          <TableColumn fx:id="colListaInformesID" maxWidth="500.0" prefWidth="75.0" text="ID" />
+          <TableColumn fx:id="colListaInformesNombre" prefWidth="75.0" text="Nombre del informe" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -39,12 +39,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar informe" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+            <Button fx:id="btnListaInformesEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar informe" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo informe" GridPane.columnIndex="1">
+            <Button fx:id="btnListaInformesNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo informe" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -52,7 +52,7 @@
                   <Tooltip text="Crear un nuevo informe a partir de una plantilla" />
                </tooltip>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver / Editar informe" GridPane.columnIndex="2">
+            <Button fx:id="btnListaInformesVerEditar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver / Editar informe" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
