--- a/src/main/java/vista/interfaces/Login.fxml
+++ b/src/main/java/vista/interfaces/Login.fxml
@@ -28,16 +28,16 @@
    </padding>
    <children>
       <Label styleClass="login-title" text="Ingresar a Plumas" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="X" GridPane.halignment="RIGHT">
+      <Button fx:id="btnLoginSalir" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="X" GridPane.halignment="RIGHT">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Button>
       <Label styleClass="login-label" text="Usuario" GridPane.rowIndex="3" />
       <Label styleClass="login-label" text="Contraseña" GridPane.rowIndex="6" />
-      <TextField styleClass="login-field" GridPane.rowIndex="4" />
-      <TextField styleClass="login-field" GridPane.rowIndex="7" />
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="login-submit" text="Ingresar" GridPane.rowIndex="9" />
-      <Label styleClass="login-title" text="¿Necesitas ayuda?" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
+      <TextField fx:id="txtLoginUsuario" styleClass="login-field" GridPane.rowIndex="4" />
+      <TextField fx:id="txtLoginContrasena" styleClass="login-field" GridPane.rowIndex="7" />
+      <Button fx:id="btnLoginIngresar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="login-submit" text="Ingresar" GridPane.rowIndex="9" />
+      <Label fx:id="lblLoginAyuda" styleClass="login-title" text="¿Necesitas ayuda?" GridPane.halignment="CENTER" GridPane.rowIndex="10" />
    </children>
 </GridPane>
