--- a/src/main/java/vista/interfaces/Programas.fxml
+++ b/src/main/java/vista/interfaces/Programas.fxml
@@ -36,12 +36,12 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TextField editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="80.0" GridPane.columnIndex="1">
+            <TextField fx:id="txtProgramasID" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="80.0" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="3">
+            <TextField fx:id="txtProgramasNombre" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -50,17 +50,17 @@
       </GridPane>
       <GridPane alignment="BOTTOM_LEFT">
          <children>
-            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar programa" textOverrun="CLIP" GridPane.columnIndex="1">
+            <Button fx:id="btnProgramasBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar programa" textOverrun="CLIP" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo programa" textOverrun="CLIP" GridPane.columnIndex="2">
+            <Button fx:id="btnProgramasNuevo" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo programa" textOverrun="CLIP" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </Button>
-            <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar programa" textOverrun="CLIP" GridPane.columnIndex="3">
+            <Button fx:id="btnProgramasEliiminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar programa" textOverrun="CLIP" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
@@ -92,12 +92,12 @@
                      <top>
                         <GridPane BorderPane.alignment="CENTER">
                            <children>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" textOverrun="CLIP" GridPane.columnIndex="1">
+                              <Button fx:id="btnProgramasGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" textOverrun="CLIP" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" textOverrun="CLIP" GridPane.columnIndex="2">
+                              <Button fx:id="btnProgramasDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" textOverrun="CLIP" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
@@ -125,8 +125,8 @@
       	                                       <Insets right="10.0" />
       	                                    </GridPane.margin>
       	                                 </Label>
-      	                                 <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      	                                 <Button mnemonicParsing="false" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      	                                 <TextField fx:id="txtProgramasDirector" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      	                                 <Button fx:id="btnProgramasDirector" mnemonicParsing="false" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="1">
       	                                    <GridPane.margin>
       	                                       <Insets left="10.0" />
       	                                    </GridPane.margin>
@@ -136,42 +136,42 @@
       	                                       <Insets right="10.0" />
       	                                    </GridPane.margin>
       	                                 </Label>
-      	                                 <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      	                                 <Button mnemonicParsing="false" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      	                                 <TextField fx:id="txtProgramasCodirector" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      	                                 <Button fx:id="btnProgramasCodirector" mnemonicParsing="false" text="Seleccionar docente" textOverrun="CLIP" GridPane.columnIndex="2" GridPane.rowIndex="2">
       	                                    <GridPane.margin>
       	                                       <Insets left="10.0" />
       	                                    </GridPane.margin>
       	                                 </Button>
       	                                 <Label text="Estado" GridPane.rowIndex="3" />
-      	                                 <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      	                                 <ComboBox fx:id="cmbProgramasEstado" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       	                                 <Label text="Disposición" GridPane.rowIndex="4">
       	                                    <GridPane.margin>
       	                                       <Insets right="10.0" />
       	                                    </GridPane.margin>
       	                                 </Label>
-      	                                 <TextField promptText="Ingrese la disposición" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      	                                 <TextField fx:id="txtProgramasDisp" promptText="Ingrese la disposición" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       	                                 <Label text="Fecha de presentación" GridPane.rowIndex="5">
       	                                    <GridPane.margin>
       	                                       <Insets right="10.0" />
       	                                    </GridPane.margin>
       	                                 </Label>
-      	                                 <DatePicker prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      	                                 <DatePicker fx:id="dtpProgramasPresentacion" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                               <Label layoutX="67.0" layoutY="137.0" text="Fecha de aprobación" GridPane.columnIndex="2" GridPane.rowIndex="5">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Label>
-      	                                 <DatePicker prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+      	                                 <DatePicker fx:id="dtpProgramasAprobacion" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
                               <Label layoutX="127.0" layoutY="137.0" text="Fecha de inicio" GridPane.rowIndex="6" />
-                              <DatePicker layoutX="587.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <DatePicker fx:id="dtpProgramasInicio" layoutX="587.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                               <Label layoutX="466.0" layoutY="137.0" text="Fecha de finalización" GridPane.columnIndex="2" GridPane.rowIndex="6">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Label>
-                              <DatePicker layoutX="256.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                              <DatePicker fx:id="dtpProgramasFinalizacion" layoutX="256.0" layoutY="133.0" prefWidth="105.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
                               <Label text="Nombre" />
-                              <TextField promptText="Ingrese el nombre del programa" GridPane.columnIndex="1" />
+                              <TextField fx:id="txtProgramasNombre" promptText="Ingrese el nombre del programa" GridPane.columnIndex="1" />
       	                              </children>
       	                              <columnConstraints>
       	                                 <ColumnConstraints hgrow="NEVER" />
@@ -205,12 +205,12 @@
                      <top>
                         <GridPane BorderPane.alignment="CENTER">
                            <children>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Agregar proyecto" textOverrun="CLIP" GridPane.columnIndex="1">
+                              <Button fx:id="btnProyectosAgregar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Agregar proyecto" textOverrun="CLIP" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar proyecto" textOverrun="CLIP" GridPane.columnIndex="2">
+                              <Button fx:id="btnProyectosQuitar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar proyecto" textOverrun="CLIP" GridPane.columnIndex="2">
                                  <GridPane.margin>
                                     <Insets left="10.0" right="10.0" />
                                  </GridPane.margin>
@@ -231,10 +231,10 @@
                         </GridPane>
                      </top>
                      <center>
-                        <TableView minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
+                        <TableView fx:id="tblProyectos" minHeight="-Infinity" prefHeight="150.0" BorderPane.alignment="CENTER">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="ID" />
-                            <TableColumn prefWidth="75.0" text="Nombre de proyecto" />
+                            <TableColumn fx:id="colProyectosID" prefWidth="75.0" text="ID" />
+                            <TableColumn fx:id="colProyectosNombre" prefWidth="75.0" text="Nombre de proyecto" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
