--- a/src/main/java/vista/interfaces/Busqueda.fxml
+++ b/src/main/java/vista/interfaces/Busqueda.fxml
@@ -41,12 +41,12 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="btnBusquedaNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.rowIndex="2">
+      <Button fx:id="btnBusquedaNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="btnBusquedaSeleccionar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <Button fx:id="btnBusquedaSeleccionar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#seleccionar" text="Seleccionar" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
