--- a/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
+++ b/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
@@ -43,17 +43,17 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="btnCargoDocenteDocente" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo docente" GridPane.rowIndex="2">
+      <Button fx:id="btnCargoDocenteDocente" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoDocente" text="Nuevo docente" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Button>
-      <Button fx:id="btnCargoDocenteSeleccionar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar cargo" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <Button fx:id="btnCargoDocenteSeleccionar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#seleccionarCargo" text="Seleccionar cargo" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
       </Button>
-      <Button fx:id="btnCargoDocenteCargo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo cargo" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Button fx:id="btnCargoDocenteCargo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoCargo" text="Nuevo cargo" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
