--- a/src/main/java/vista/interfaces/Roles.fxml
+++ b/src/main/java/vista/interfaces/Roles.fxml
@@ -45,9 +45,9 @@
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
-                  <TextField promptText="Ingrese el nombre del rol" GridPane.columnIndex="3" />
-                  <TextField promptText="Ingrese una descripción para el rol" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtRolesId" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
+                  <TextField fx:id="txtRolesNombre" promptText="Ingrese el nombre del rol" GridPane.columnIndex="3" />
+                  <TextField fx:id="txtRolesDescripcion" promptText="Ingrese una descripción para el rol" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
                </children>
                <VBox.margin>
                   <Insets left="10.0" right="10.0" top="10.0" />
@@ -68,27 +68,27 @@
                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo rol" GridPane.columnIndex="1">
+                  <Button fx:id="btnRolesNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo rol" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="2">
+                  <Button fx:id="btnRolesGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="3">
+                  <Button fx:id="btnRolesDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar rol" GridPane.columnIndex="4">
+                  <Button fx:id="btnRolesEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar rol" GridPane.columnIndex="4">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar rol">
+                  <Button fx:id="btnRolesBuscar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar rol">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -120,7 +120,7 @@
                       <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <TableView editable="true">
+                        <TableView fx:id="tblPermisos" editable="true">
                           <columns>
                             <TableColumn editable="false" prefWidth="75.0" text="Módulo" />
                               <TableColumn maxWidth="700.0" prefWidth="75.0" text="Ver" />
