--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -41,7 +41,7 @@
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="txtDocentesLegajo" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1">
+                  <TextField fx:id="txtDocentesLegajo" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
