Correcciones de consistencia

--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -153,7 +153,7 @@
                                                 <Insets />
                                              </GridPane.margin>
                                           </TextField>
-                                          <Button fx:id="btnDatosPersonas" maxWidth="200.0" mnemonicParsing="false" onAction="#buscarPersona" text="Seleccionar persona" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                          <Button fx:id="btnDatosPersonas" maxWidth="200.0" mnemonicParsing="false" onAction="#seleccionarPersona" text="Seleccionar persona" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
